# swaq-backend

./: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  check_revision.py  client_init.txt  debug_login_query.py  debug_token.py  debug_urls.py  groq_models.txt  pyproject.toml  reproduce_bcrypt.py  requirements.txt  test_ai.py  test_models.py  test_openrouter.py  tmp_env.txt  vercel.json
.agent/rules/always-on/: agent-behavior.md  agent-utils.md  architecture.md  code-quality.md  project-context.md
.agent/rules/model-decides/: ai-pipeline.md  api-design.md  database.md  (+9 more)
.claude/: settings.local.json
agent_utils/: README.md  check_data.py  debug_login_strict.py  full_health_check.py  test_dashboard.py  test_dashboard2.py  test_raw_sql.py  verify_ai.py  verify_b2.py  verify_b2_detailed.py  verify_b2_final.py  verify_b2_regions.py  verify_db_fix.py  verify_openrouter.py
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: main.py
app/api/: dashboard.py  deps.py  meals.py  profile.py  router.py
app/core/: config.py  database.py  exceptions.py  redis.py  security.py
app/models/: meal.py  nutrition.py  nutrition_cache.py  user.py
app/schemas/: auth.py  common.py  dashboard.py  meal.py  nutrition.py  user.py
app/services/: ai_food_recognizer.py  bmi_calculator.py  image_storage.py  meal_service.py  nutrition_lookup.py  profile_service.py  recommendation_engine.py  scan_processor.py  scan_worker.py
app/utils/: constants.py  helpers.py  prompts.py
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
scripts/: seed_indian_foods.py  test_gemini.py  test_openrouter.py
scripts/sandbox/: debug_ai.py  debug_text.py  test_ai.py  test_gemini_key.py  test_models.py  test_run.py  test_standard_gemini.py  test_v_old.py  test_vertex.py  test_vertex_with_key.py  v2.py  verify_multimodal.py
tests/: conftest.py  test_ai_recognizer.py  test_auth.py  test_meals.py  test_nutrition.py  test_profile.py  test_recommendations.py  test_text_logging.py
(+10 files in other folders)
